<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.apps.salta3a.citizenguide.Activities.DepartmentActivity">
    <ImageView
        android:id="@+id/deptImage"
        android:layout_gravity="right"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:src="@drawable/department_gam_image"/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/aboutDept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
       android:layout_weight="1"
        android:text="عن الخدمة"/>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/GAMservicesContainer"
            android:visibility="gone"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/professionsLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PLTitle"
                android:onClick="professionsLicenseClick"/>
            <Button
                android:id="@+id/buildingsTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buildingTaxTitle"
                android:onClick="buildingsTaxClick"/>
            <Button
                android:id="@+id/trafficViolations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trafficViolationsTitle"
                android:onClick="trafficViolationsClick"/>
            <Button
                android:id="@+id/bids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bidsTitle"
                android:onClick="bidsClick"/>
            <Button
                android:id="@+id/complaint"
                android:text="@string/complaintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="complaintClick"/>
            <Button
                android:id="@+id/recallSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recallSubmitTitle"
                android:onClick="recallSubmitClick"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/CIservicesContainer"
            android:visibility="gone"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/issuingBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuingBirthTitle"
                android:onClick="issuingBirthClick"/>
            <Button
                android:id="@+id/issuingMarriage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuingMarriageTitle"
                android:onClick="issuingMarriageClick"/>
            <Button
                android:id="@+id/issuingDivorce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuingDivorceTitle"
                android:onClick="issuingDivorceClick"/>
            <Button
                android:id="@+id/ratificationDocuments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratificationDocumentsTitle"
                android:onClick="ratificationDocumentsClick"/>
            <Button
                android:id="@+id/issuingID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuingIDTitle"
                android:onClick="issuingIDClick"/>
            <Button
                android:id="@+id/issuingPassport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuingPassportTitle"
                android:onClick="issuingPassportClick"/>
            <Button
                android:id="@+id/issuingFamilyEnrollment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issuingFamilyEnrollmentTitle"
                android:onClick="issuingFamilyEnrollmentClick"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/LVservicesContainer"
            android:visibility="gone"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/permitsServicesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permitsServices"
                android:onClick="permitsServicesButtonClick"/>
            <Button
                android:id="@+id/irregularitiesServicesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/irregularitiesServices"
                android:onClick="irregularitiesServicesButtonClick"/>
            <Button
                android:id="@+id/professionalLicensingServicesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/professionalLicensingServices"
                android:onClick="professionalLicensingServicesButtonClick"/>
            <Button
                android:id="@+id/accidentServicesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accidentServices"
                android:onClick="accidentServicesButtonClick"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/permitsServicesContainer"
            android:visibility="gone"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/tipperPermitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipperPermitTitle"
                android:onClick="tipperPermit"/>
            <Button
                android:id="@+id/concreteMixerPermitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concreteMixerPermitTitle"/>
            <Button
                android:id="@+id/concretePumpPermit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/concretePumpPermitTitle"/>
            <Button
            android:id="@+id/truckEntryPermitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truckEntryPermitTitle"/>
            <Button
                android:id="@+id/tankPermit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/truckEntryPermitTitle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/irregularitiesServicesContainer"
            android:visibility="gone"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/irregularitiesPaymentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/irregularitiesPaymentTitle"/>
            <Button
                android:id="@+id/reservedLicensesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservedLicensesTitle"/>
            <Button
                android:id="@+id/decodingReservedCarButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decodingReservedCarTitle"/>
            <Button
                android:id="@+id/objectTrafficIrregularitiesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objectTrafficIrregularitiesTitle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/professionalLicensingServicesContainer"
            android:visibility="gone"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/gasStationsDetectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gasStationsDetectionTitle"/>
            <Button
                android:id="@+id/cafeShopDetectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cafeShopDetectionTitle"/>
            <Button
                android:id="@+id/weddingHallsDetectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weddingHallsDetectionTitle"/>
            <Button
                android:id="@+id/drivingTrainingStationsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drivingTrainingStationTitle"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/accidentServicesContainer"
            android:visibility="gone"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/getSchemeSketchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getSchemeSketchTitle"/>
            <Button
                android:id="@+id/objectSchemeSketchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/objectSchemeSketchTitle"/>
            <Button
                android:id="@+id/getReportForUnknownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getReportForUnknownTitle"/>
            <Button
                android:id="@+id/freeVehicleAccidentsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/freeVehicleAccidentsTitle"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>

</LinearLayout>
